<resources>
    <string name="app_name">Lab1</string>
    <string name="title">中山大学学生信息系统</string>
    <string name="number">学号:</string>
    <string name="numberenter">请输入学号</string>
    <string name="password">密码:</string>
    <string name="passwordenter">请输入密码</string>
    <string name="choose1_1">学生</string>
    <string name="choose1_2">教职工</string>
    <string name="button1_1">登录</string>
    <string name="button1_2">注册</string>
</resources>
